--- a/perfi-frontend/src/scss/Buttons.scss
+++ b/perfi-frontend/src/scss/Buttons.scss
@@ -89,6 +89,10 @@ button {
 }
 
 .table-padded {
+
+    tbody {
+        width: 150px;
+    }
     tr {
         td {
             padding: 10px;
